@@ -1,3 +1,9 @@
+2007-10-31  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* win/rules.vc:     Use -fp:strict with msvc8 as -fp:precise fails on
+	* generic/tkObj.c:  amd64 builds. Fix the two places in Tk that generate
+	* generic/tkTrig.c: errors with msvc8 when using this flag.
+
 2007-10-30  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* library/choosedir.tcl: only enable OK button when valid in
